--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@ left: 50%;
 	<!--<button id="square-button" type="submit" onclick="ring();"><img src="picture/key_rising_hopper.png" /></button>
 	-->
 	
+
+	<div id="str">このタグの中身を書き換えます。</div>
+	<div id="debug">このタグの中身を書き換えます。</div>
+	<div id="debug_bool">このタグの中身を書き換えます。</div>
+	<div id="debug_gain">このタグの中身を書き換えます。</div>
 </body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
     <script>
