--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>滅亡迅雷.net</title>
+	<title>1000%</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
 	<style type="text/css">
@@ -78,9 +78,9 @@ left: 50%;
 <div class="swiper-container">
 	<div class="swiper-wrapper">
 		<div class="swiper-slide">
-			<img src="picture/key_sting_scorpion.png" class=square-button2></img>
+			<img id = "key" src="picture/key_sting_scorpion.png" class=square-button2></img>
 			<a href="#" onclick="ring();" class=square-button>
-				<img src="picture/key_sting_scorpion_light.png" class=square-button></img>
+				<img id = "key_light" src="picture/key_sting_scorpion_light.png" class=square-button></img>
 			</a>
 		</div>
 		</div>
