--- a/index.html
+++ b/index.html
@@ -83,6 +83,12 @@ left: 50%;
 				<img id = "key_light" src="picture/key_awaking_arsino_light.png" class=square-button></img>
 			</a>
 		</div>
+		<div class="swiper-slide">
+			<img id="key" src="picture/key_awaking_arsino.png" class=square-button2></img>
+			<a href="#" onclick="ring();" class=square-button>
+				<img id="key_light" src="picture/key_awaking_arsino_light.png" class=square-button></img>
+			</a>
+		</div>
 		</div>
 	</div>
 </div>
